# parrandatathon2025

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  supply_chain_questions.csv  supply_chain_questions_easy.csv  workflow
agents/: base_node.py  evaluator.py  graph.py  orchestrator.py  retriever.py
alex/: category_agent.py  keyword_matching_sql.py  rag_agent.py  rag_agent_logic.py  sql_query_agent.py
backend/: main.py  test_api.py
carlos/: bm25_embed.py  keyword_clustering.py  langgraph_rag_bm25_only.py  llm_keyword_clustering.py  sql_aggregate_agent.py  test.py
elias/: batch_api.py  clean_data.py  embedding_summary.ipynb  embeddings_transformer.py  from_embeddings_to_chroma.py  from_embeddings_to_chroma_first.py  from_embeddings_to_chroma_full.py  generate_questions.py  interesting_pages.py  interesting_pages_language_and_privacy.py  interesting_pages_length.py  interesting_pages_simple.py  langgraph_rag.py  langgraph_rag_hf_only.py  langgraph_rag_openai_only.py
embeddings_openai/: 1-act.com.h5  1-vision.com.h5  100coaches.com.h5  101financial.com.h5  1021creative.com.h5  10roadsexpress.com.h5  10up.com.h5  10xhealthsystem.com.h5  1105media.com.h5  11miami.com.h5  11residential.com.h5  120water.com.h5  123employee.com.h5  12oaks.com.h5  12onyourside.com.h5  12stone.com.h5  12stonehealth.com.h5  12thmanfoundation.com.h5  12thtribe.com.h5  12thwonder.com.h5  14news.com.h5  15000cubits.com.h5  174powerglobal.com.h5  1800dentist.com.h5  1800thompson.com.h5  1840andco.com.h5  1901group.com.h5  1cbank.com.h5  1concier.com.h5  1fbusa.com.h5  (+13072 more)
(+39 files in other folders)
