[project]
name = "parrandatathon2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3.25",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "rank-bm25>=0.2.2",
    "h5py>=3.13.0",
    "langchain-openai>=0.3.12",
]
